4.0.3
  17-12-17
	Improvement
	* #t1833:	CSS Styled Content > Fluid Styled Content

4.0.2
  17-12-14
  Improvement
	* #i0025: Fluid template: <v:asset.script> is removed

4.0.1
  17-12-05
  Improvement
	* #i0024: Upgrade TCA for TYPO3 8.7
						* bodytext;;;richtext[]:rte_transform[mode=ts];*,

4.0.0
  17-10-15
  Feature
	* #i0023: Plugins
						* Slick Slider for Content Elements
						* Slick Slider for Images

3.0.0
  17-10-14
  UPGRADE TYPO3 8.x
	BE AWARE: You should include static templates again!
	THANKS to Andrea Herzog-Kienast to contract the upgrade :) http://www.kienastdv.de/
	* #t1686: Template for fluid_styled_content
						* Moved:
							* Resources/Private/* to Resources/Private/Fluid/Slick/*
						Constant Editor
						* Moved:
							* plugin.slick.item.view.* > plugin.slick.item.template.+
	* #t1683: TYPO3 8.x
						BUGFIX
						* Uncaught UnexpectedValueException: Missing "type" in TCA of field "['tt_content']['section_frame']['config']"
						* SpriteManager > IconRegistry
						Removed Features
						* slick slideshow
	Features
	* #i0022: Slick Carousel for images (from TYPO3 8.x)
	* #i0021: ReST-Documentation

2.6.2
  17-10-12
  Feature
	* #i0020: new: controlling slick items by classes. So far it was possible: controlling by id.
						I.e: grid-elements have a clasas field. Enter slider1, slider2 or slider3

2.6.1
  17-10-11
  UPGRADE slick
	* #t1682: new property pauseOnHover

2.6.0
  17-10-11
  UPGRADE slick
	* #t1682: 1.5.0 > 1.8.0

2.5.2
  17-05-16
	Improvement
	* #t1228: slickcarousel: compatibillity with Bootstrap Package (bootstrap_package). See:
						Configuration/TypoScript/Base/tt_content/_setup.ts
						Thanks to Andrea Herzog-Kienast for the contract

2.5.1
  17-03-20
  Improvement
  * #i0019: CSS is optimised for merging

2.5.0
  17-03-02
  Feature
  * #i0018: Slick can handle up to three carousels now
						* content element: Slick: Carousel [1-3]
						* Constant Editor > Category > Slick - Carousel [1-3] - Javascript ...
